tests/type_errors/wrong_arity.sy
mod A

def main
: Int -> Int
: a = f ' a

def f
: Int -> Int -> Int
: a b = a + b

-- TODO: Not sure I like the extra lines at the end, maybe shrink the spans whitespace?

--+ expected exit status: 7
--+ expected stderr:
--+ > Failed to merge types.
--+ 
--+ '@ Int'  -> ([(class '@ Num')] => '@ Int' )
--+ ----
--+ '@ Int' 
--+ 
--+ tests/type_errors/wrong_arity.sy
--+   3| def main
--+   4| : Int -> Int
--+   5| : a = f ' a
--+   6| 
--+   7| def f

